RESOLVED FIXED149705
Fix the #if guard in PointerLockController.cpp
https://bugs.webkit.org/show_bug.cgi?id=149705
Summary Fix the #if guard in PointerLockController.cpp
Csaba Osztrogonác
Reported 2015-10-01 05:21:21 PDT
The whole file is guarded by #ENABLE(POINTER_LOCK), but includes. There is no reason to include anything in this case similar to other sources.
Attachments
Patch (1.24 KB, patch)
2015-10-01 05:26 PDT, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2015-10-01 05:26:32 PDT
WebKit Commit Bot
Comment 2 2015-10-01 22:45:26 PDT
Comment on attachment 262249 [details] Patch Clearing flags on attachment: 262249 Committed r190456: <http://trac.webkit.org/changeset/190456>
WebKit Commit Bot
Comment 3 2015-10-01 22:45:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.