Fix the #if guard in PointerLockController.cpp https://bugs.webkit.org/show_bug.cgi?id=149705

Reviewed by Gyuyoung Kim.

* page/PointerLockController.cpp:


Canonical link: https://commits.webkit.org/167859@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190456 268f45cc-cd09-0410-ab3c-d52691b4dbfc